--- a/admin-dashboard/add-user.html
+++ b/admin-dashboard/add-user.html
@@ -171,11 +171,12 @@
 
             <a href="/admin-dashboard/health-facilities.html">
                 <div class="menu-item">
-            <svg class="icon sidebar-icon mx-0" width="26px" height="26px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M21.5 8.5C21.5 7.09554 21.5 6.39331 21.1629 5.88886C21.017 5.67048 20.8295 5.48298 20.6111 5.33706C20.1699 5.04224 19.5774 5.00529 18.496 5.00066C18.5001 5.29206 18.5 5.59655 18.5 5.91051L18.5 6V7.25H19.5C19.9142 7.25 20.25 7.58579 20.25 8C20.25 8.41421 19.9142 8.75 19.5 8.75H18.5V10.25H19.5C19.9142 10.25 20.25 10.5858 20.25 11C20.25 11.4142 19.9142 11.75 19.5 11.75H18.5V13.25H19.5C19.9142 13.25 20.25 13.5858 20.25 14C20.25 14.4142 19.9142 14.75 19.5 14.75H18.5V21.25H17V6C17 4.11438 17 3.17157 16.4142 2.58579C15.8284 2 14.8856 2 13 2H11C9.11438 2 8.17157 2 7.58579 2.58579C7 3.17157 7 4.11438 7 6V21.25H5.5V14.75H4.5C4.08579 14.75 3.75 14.4142 3.75 14C3.75 13.5858 4.08579 13.25 4.5 13.25H5.5V11.75H4.5C4.08579 11.75 3.75 11.4142 3.75 11C3.75 10.5858 4.08579 10.25 4.5 10.25H5.5V8.75H4.5C4.08579 8.75 3.75 8.41421 3.75 8C3.75 7.58579 4.08579 7.25 4.5 7.25H5.5V6L5.49999 5.9105C5.49996 5.59655 5.49992 5.29206 5.50403 5.00066C4.42262 5.00529 3.83008 5.04224 3.38886 5.33706C3.17048 5.48298 2.98298 5.67048 2.83706 5.88886C2.5 6.39331 2.5 7.09554 2.5 8.5V21.25H2C1.58579 21.25 1.25 21.5858 1.25 22C1.25 22.4142 1.58579 22.75 2 22.75H22C22.4142 22.75 22.75 22.4142 22.75 22C22.75 21.5858 22.4142 21.25 22 21.25H21.5V8.5ZM12 4.25C12.4142 4.25 12.75 4.58579 12.75 5V6.25H14C14.4142 6.25 14.75 6.58579 14.75 7C14.75 7.41421 14.4142 7.75 14 7.75H12.75V9C12.75 9.41421 12.4142 9.75 12 9.75C11.5858 9.75 11.25 9.41421 11.25 9V7.75H10C9.58579 7.75 9.25 7.41421 9.25 7C9.25 6.58579 9.58579 6.25 10 6.25H11.25V5C11.25 4.58579 11.5858 4.25 12 4.25ZM9.25 12C9.25 11.5858 9.58579 11.25 10 11.25H14C14.4142 11.25 14.75 11.5858 14.75 12C14.75 12.4142 14.4142 12.75 14 12.75H10C9.58579 12.75 9.25 12.4142 9.25 12ZM9.25 15C9.25 14.5858 9.58579 14.25 10 14.25H14C14.4142 14.25 14.75 14.5858 14.75 15C14.75 15.4142 14.4142 15.75 14 15.75H10C9.58579 15.75 9.25 15.4142 9.25 15ZM12 18.25C12.4142 18.25 12.75 18.5858 12.75 19V21.25H11.25V19C11.25 18.5858 11.5858 18.25 12 18.25Z"
-                    fill="#9197B3" />
-            </svg>
+                    <svg class="icon sidebar-icon mx-0" width="26px" height="26px" viewBox="0 0 24 24" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M21.5 8.5C21.5 7.09554 21.5 6.39331 21.1629 5.88886C21.017 5.67048 20.8295 5.48298 20.6111 5.33706C20.1699 5.04224 19.5774 5.00529 18.496 5.00066C18.5001 5.29206 18.5 5.59655 18.5 5.91051L18.5 6V7.25H19.5C19.9142 7.25 20.25 7.58579 20.25 8C20.25 8.41421 19.9142 8.75 19.5 8.75H18.5V10.25H19.5C19.9142 10.25 20.25 10.5858 20.25 11C20.25 11.4142 19.9142 11.75 19.5 11.75H18.5V13.25H19.5C19.9142 13.25 20.25 13.5858 20.25 14C20.25 14.4142 19.9142 14.75 19.5 14.75H18.5V21.25H17V6C17 4.11438 17 3.17157 16.4142 2.58579C15.8284 2 14.8856 2 13 2H11C9.11438 2 8.17157 2 7.58579 2.58579C7 3.17157 7 4.11438 7 6V21.25H5.5V14.75H4.5C4.08579 14.75 3.75 14.4142 3.75 14C3.75 13.5858 4.08579 13.25 4.5 13.25H5.5V11.75H4.5C4.08579 11.75 3.75 11.4142 3.75 11C3.75 10.5858 4.08579 10.25 4.5 10.25H5.5V8.75H4.5C4.08579 8.75 3.75 8.41421 3.75 8C3.75 7.58579 4.08579 7.25 4.5 7.25H5.5V6L5.49999 5.9105C5.49996 5.59655 5.49992 5.29206 5.50403 5.00066C4.42262 5.00529 3.83008 5.04224 3.38886 5.33706C3.17048 5.48298 2.98298 5.67048 2.83706 5.88886C2.5 6.39331 2.5 7.09554 2.5 8.5V21.25H2C1.58579 21.25 1.25 21.5858 1.25 22C1.25 22.4142 1.58579 22.75 2 22.75H22C22.4142 22.75 22.75 22.4142 22.75 22C22.75 21.5858 22.4142 21.25 22 21.25H21.5V8.5ZM12 4.25C12.4142 4.25 12.75 4.58579 12.75 5V6.25H14C14.4142 6.25 14.75 6.58579 14.75 7C14.75 7.41421 14.4142 7.75 14 7.75H12.75V9C12.75 9.41421 12.4142 9.75 12 9.75C11.5858 9.75 11.25 9.41421 11.25 9V7.75H10C9.58579 7.75 9.25 7.41421 9.25 7C9.25 6.58579 9.58579 6.25 10 6.25H11.25V5C11.25 4.58579 11.5858 4.25 12 4.25ZM9.25 12C9.25 11.5858 9.58579 11.25 10 11.25H14C14.4142 11.25 14.75 11.5858 14.75 12C14.75 12.4142 14.4142 12.75 14 12.75H10C9.58579 12.75 9.25 12.4142 9.25 12ZM9.25 15C9.25 14.5858 9.58579 14.25 10 14.25H14C14.4142 14.25 14.75 14.5858 14.75 15C14.75 15.4142 14.4142 15.75 14 15.75H10C9.58579 15.75 9.25 15.4142 9.25 15ZM12 18.25C12.4142 18.25 12.75 18.5858 12.75 19V21.25H11.25V19C11.25 18.5858 11.5858 18.25 12 18.25Z"
+                            fill="#9197B3" />
+                    </svg>
                     <span class="menu-text">Health Care Facilities</span>
                 </div>
             </a>
@@ -217,15 +218,38 @@
                 <form id="facilityForm">
                     <div class="row">
                         <!-- Organization Details -->
-                        <div class="col-12">
+                        <div class="col-12 col-md-6">
                             <input type="text" class="form-control" name="name" placeholder="First Name*" required>
                         </div>
-                        <div class="col-12">
+
+                        <div class="col-12 col-md-6">
                             <input type="text" class="form-control" name="last_name" placeholder="Last Name*" required>
                         </div>
-                        <div class="col-12">
+
+                        <div class="col-12 col-md-6">
                             <input type="text" class="form-control" name="email" placeholder="Email*" required>
                         </div>
+
+                        <div class="col-12 col-md-6">
+                            <input type="tel" class="form-control" name="phone" placeholder="Phone Number*" required>
+                        </div>
+
+                        <div class="col-12 country-drop-down-container">
+                            <select id="country" class="form-select country-drop-down" name="country" required>
+                                <option value="">Select Country*</option>
+                            </select>
+                        </div>
+
+                        <div class="col-12">
+                            <select id="state-drop-down" name="state" class="form-select select-state" required disabled>
+                                <option value="">Select State*</option>
+                            </select>
+                        </div>
+
+                        <div class="col-12">
+                            <input type="text" class="form-control" name="city" placeholder="City*" required>
+                        </div>
+
                         <div class="col-12">
                             <input type="text" class="form-control" name="password" placeholder="Password*" required>
                         </div>
@@ -237,6 +261,7 @@
                                 <option value="web administrator">Web Administrator</option>
                                 <option value="data entry pro">Data Entry Pro</option>
                             </select>
+
                             <div id="otherOwnershipType" style="display: none;" class="mt-2">
                                 <input type="text" class="form-control" name="other_ownership_type"
                                     placeholder="Please specify ownership type*" disabled>
@@ -487,7 +512,56 @@
     <script src="js/sidebar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="js/country-states.js"></script>
     <script>
+
+            var user_country_code = "";
+
+            (() => {
+                const country_list = country_and_states.country;
+                const state_list = country_and_states.states;
+
+                const id_state_option = document.getElementById("state-drop-down");
+                const id_country_option = document.getElementById("country");
+
+                // Initially disable the state dropdown
+                id_state_option.innerHTML = '<option>select state</option>';
+                id_state_option.setAttribute("disabled", "disabled");
+
+                const create_country_selection = () => {
+                    let option = '<option value="" selected disabled>Select Country</option>'; // Placeholder option
+                    for (const country_code in country_list) {
+                        option += '<option value="' + country_code + '">' + country_list[country_code] + '</option>';
+                    }
+                    id_country_option.innerHTML = option;
+                };
+
+                const create_states_selection = () => {
+                    let selected_country_code = id_country_option.value;
+                    let state_names = state_list[selected_country_code];
+
+                    if (!state_names) {
+                        id_state_option.innerHTML = '<option>select state</option>';
+                        id_state_option.setAttribute("disabled", "disabled");
+                        return;
+                    }
+
+                    let option = '<option>select state</option>';
+                    state_names.forEach(state => {
+                        option += '<option value="' + state.code + '">' + state.name + '</option>';
+                    });
+
+                    id_state_option.innerHTML = option;
+                    id_state_option.removeAttribute("disabled"); // Enable dropdown when country is selected
+                };
+
+                // Country select change event update state dropdown
+                id_country_option.addEventListener('change', create_states_selection);
+
+                // Initialize country dropdown with placeholder
+                create_country_selection();
+            })();
+        
         // Remote Care functionality
         const remoteCareDropdown = document.getElementById('m-remote-care-dropdown');
         const remoteCareDropdownBtn = document.getElementById('remote-care-dropdown');
@@ -570,6 +644,10 @@
                 name: document.querySelector('input[name="name"]').value,
                 last_name: document.querySelector('input[name="last_name"]').value,
                 email: document.querySelector('input[name="email"]').value,
+                country: document.querySelector('select[name="country"] option:checked').innerText,
+                phone: document.querySelector('input[name="phone"]').value,
+                state: document.querySelector('select[name="state"] option:checked').innerText,
+                city: document.querySelector('input[name="city"]').value,
                 password: document.querySelector('input[name="password"]').value,
                 role: document.querySelector('.select-role').value,
             };
@@ -582,7 +660,7 @@
             };
 
 
-            console.log(emailData);
+            console.log(formData);
             try {
                 const userResponse = await axios.post('https://health-care-facilities-backend.vercel.app/api/add-user', formData);
                 console.log(userResponse.data);
