--- a/admin-dashboard/edit-user.html
+++ b/admin-dashboard/edit-user.html
@@ -418,7 +418,7 @@
                 
             };
             console.log(formData);
-            await axios.put('http://localhost:3000/api/edit-user', formData, {
+            await axios.put('https://health-care-facilities-backend.vercel.app/api/edit-user', formData, {
                 headers: {
                     'id': id
                 }
