--- a/admin-dashboard/edit-user.html
+++ b/admin-dashboard/edit-user.html
@@ -39,34 +39,42 @@
             </button>
 
             <!-- User Dropdown (visible on desktop) -->
-            <div class="d-flex ms-lg-auto" id="profile-btn">
-                <div class="dropdown d-none d-lg-block">
-                    <div class="dropdown-toggle d-flex align-items-center gap-2 show" data-bs-toggle="dropdown"
-                        style="cursor: pointer;" aria-expanded="true">
-                        <img src="assets/1.png" alt="a" class="user-avatar">
-                        <span class=" d-inline user-name">Faheem Shafique</span>
+<div class="d-flex ms-lg-auto" id="profile-btn">
+    <div class="dropdown d-none d-lg-block">
+        <div class="dropdown-toggle d-flex align-items-center gap-2 show" data-bs-toggle="dropdown"
+            style="cursor: pointer;" aria-expanded="true">
+            <img src="assets/1.png" alt="" class="user-avatar">
+            <span class=" d-inline user-name"></span>
+        </div>
+        <ul class="dropdown-menu shadow"
+            style="width: 313px; padding: 16px; border-radius: 0px; border: none; position: absolute; inset: 0px 0px auto auto; margin: 0px; transform: translate(0px, 42.2222px);"
+            data-popper-placement="bottom-end">
+            <li class="dropdown-header p-0 mb-3">
+                <div class="d-flex gap-3 align-items-center">
+                    <img src="assets/1.png" width="30" class="img-fluid" alt=""
+                        style="width: 87px; height: 87px; border-radius: 50%;">
+                    <div>
+                        <h6 class="mb-0 user-name"></h6>
+                        <small class="text-muted" id="user-role"></small>
                     </div>
-                    <ul class="dropdown-menu shadow"
-                        style="width: 313px; padding: 16px; border-radius: 0px; border: none; position: absolute; inset: 0px 0px auto auto; margin: 0px; transform: translate(0px, 42.2222px);"
-                        data-popper-placement="bottom-end">
-                        <li class="dropdown-header p-0 mb-3">
-                            <div class="d-flex gap-3 align-items-center">
-                                <img src="assets/1.png" width="30" class="img-fluid" alt=""
-                                    style="width: 87px; height: 87px; border-radius: 50%;">
-                                <div>
-                                    <h6 class="mb-0 user-name">Faheem Shafique</h6>
-                                    <small class="text-muted" id="user-role">Super Admin</small>
-                                </div>
-                            </div>
-                        </li>
-                        <div class="border-top mt-2 pt-2">
-                            <button class="dropdown-item py-2 text-primary fw-semibold" id="logout-btn">
-                                Logout
-                            </button>
-                        </div>
-                    </ul>
                 </div>
+            </li>
+            <li><a class="dropdown-item py-2 d-flex align-items-center gap-3" href="/facility-listings.html">
+                    <svg width="26px" height="26px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M21.5 8.5C21.5 7.09554 21.5 6.39331 21.1629 5.88886C21.017 5.67048 20.8295 5.48298 20.6111 5.33706C20.1699 5.04224 19.5774 5.00529 18.496 5.00066C18.5001 5.29206 18.5 5.59655 18.5 5.91051L18.5 6V7.25H19.5C19.9142 7.25 20.25 7.58579 20.25 8C20.25 8.41421 19.9142 8.75 19.5 8.75H18.5V10.25H19.5C19.9142 10.25 20.25 10.5858 20.25 11C20.25 11.4142 19.9142 11.75 19.5 11.75H18.5V13.25H19.5C19.9142 13.25 20.25 13.5858 20.25 14C20.25 14.4142 19.9142 14.75 19.5 14.75H18.5V21.25H17V6C17 4.11438 17 3.17157 16.4142 2.58579C15.8284 2 14.8856 2 13 2H11C9.11438 2 8.17157 2 7.58579 2.58579C7 3.17157 7 4.11438 7 6V21.25H5.5V14.75H4.5C4.08579 14.75 3.75 14.4142 3.75 14C3.75 13.5858 4.08579 13.25 4.5 13.25H5.5V11.75H4.5C4.08579 11.75 3.75 11.4142 3.75 11C3.75 10.5858 4.08579 10.25 4.5 10.25H5.5V8.75H4.5C4.08579 8.75 3.75 8.41421 3.75 8C3.75 7.58579 4.08579 7.25 4.5 7.25H5.5V6L5.49999 5.9105C5.49996 5.59655 5.49992 5.29206 5.50403 5.00066C4.42262 5.00529 3.83008 5.04224 3.38886 5.33706C3.17048 5.48298 2.98298 5.67048 2.83706 5.88886C2.5 6.39331 2.5 7.09554 2.5 8.5V21.25H2C1.58579 21.25 1.25 21.5858 1.25 22C1.25 22.4142 1.58579 22.75 2 22.75H22C22.4142 22.75 22.75 22.4142 22.75 22C22.75 21.5858 22.4142 21.25 22 21.25H21.5V8.5ZM12 4.25C12.4142 4.25 12.75 4.58579 12.75 5V6.25H14C14.4142 6.25 14.75 6.58579 14.75 7C14.75 7.41421 14.4142 7.75 14 7.75H12.75V9C12.75 9.41421 12.4142 9.75 12 9.75C11.5858 9.75 11.25 9.41421 11.25 9V7.75H10C9.58579 7.75 9.25 7.41421 9.25 7C9.25 6.58579 9.58579 6.25 10 6.25H11.25V5C11.25 4.58579 11.5858 4.25 12 4.25ZM9.25 12C9.25 11.5858 9.58579 11.25 10 11.25H14C14.4142 11.25 14.75 11.5858 14.75 12C14.75 12.4142 14.4142 12.75 14 12.75H10C9.58579 12.75 9.25 12.4142 9.25 12ZM9.25 15C9.25 14.5858 9.58579 14.25 10 14.25H14C14.4142 14.25 14.75 14.5858 14.75 15C14.75 15.4142 14.4142 15.75 14 15.75H10C9.58579 15.75 9.25 15.4142 9.25 15ZM12 18.25C12.4142 18.25 12.75 18.5858 12.75 19V21.25H11.25V19C11.25 18.5858 11.5858 18.25 12 18.25Z"
+                            fill="#000" />
+                    </svg>
+                    Facility Listings
+                </a></li>
+            <div class="border-top mt-2 pt-2">
+                <button class="dropdown-item py-2 text-primary fw-semibold" id="logout-btn">
+                    Logout
+                </button>
             </div>
+        </ul>
+    </div>
+</div>
         </div>
     </header>
 
@@ -301,7 +309,60 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/country-states.js"></script>
-    <script>
+   <script> 
+    const u_id = localStorage.getItem('u_id');
+
+    axios.get('https://health-care-facilities-backend.vercel.app/api/get-user', {
+        headers: {
+            'id': u_id
+        }
+    }).then((res) => {
+
+        if (res.data.user.role !== 'super admin') {
+            location.href = '/';
+        }
+
+        const userName = document.querySelectorAll('.user-name');
+        const email = document.getElementById('user-role');
+
+        userName.forEach((name) => {
+            name.innerHTML = `${res.data.user.name} ${res.data.user.last_name}`;
+        })
+
+        email.innerHTML = res.data.user.role
+    }).catch((err) => {
+        console.log(err);
+    })
+
+    const loginOut = document.getElementById('logout-btn');
+
+    loginOut.addEventListener(('click'), () => {
+        localStorage.removeItem('login')
+        localStorage.removeItem('u_id')
+        location.href = '/';
+    })
+
+
+        // Remote Care functionality
+        const remoteCareDropdown = document.getElementById('m-remote-care-dropdown');
+        const remoteCareDropdownBtn = document.getElementById('remote-care-dropdown');
+        const remoteCareBtn = document.querySelectorAll('.remote-care-btn');
+        const pairDevicePopop = document.getElementById('paired-device-popup');
+        const pairedBackBtn = document.getElementById('paired-black-btn');
+        const pairedCloseBtn = document.getElementById('paired-close-btn');
+
+        // Add event listeners for remote care dropdown
+        remoteCareDropdownBtn.addEventListener('click', () => {
+            remoteCareDropdown.classList.toggle('d-none');
+        });
+
+        pairedBackBtn.addEventListener('click', () => {
+            pairDevicePopop.classList.add('d-none');
+        });
+
+        pairedCloseBtn.addEventListener('click', () => {
+            pairDevicePopop.classList.add('d-none');
+        });
 
         var user_country_code = "";
 
