--- a/admin-dashboard/health-facilities.html
+++ b/admin-dashboard/health-facilities.html
@@ -576,6 +576,9 @@
 
                     email.innerHTML = res.data.user.role
                 }).catch((err) => {
+                    if (err.response.data.error === 'User not found') {
+                         location.href = '/';
+                    }
                     console.log(err);
                 })
 
