--- a/admin-dashboard/health-facilities.html
+++ b/admin-dashboard/health-facilities.html
@@ -507,20 +507,20 @@
                     <h4>Share</h4>
                 </div>
                 <div class="d-flex flex-column social-button">
-                    <button>
-                        <img src="assets/facebook.png" alt="">
+                    <button class="fb-share-btn">
+                        <img src="assets/facebook.png" alt="Facebook">
                         <span class="mx-3">Facebook</span>
                     </button>
-                    <button>
-                        <img src="assets/whats app.png" alt="">
+                    <button class="whatsapp-share-btn">
+                        <img src="assets/whats app.png" alt="WhatsApp">
                         <span class="mx-3">WhatsApp</span>
                     </button>
-                    <button>
-                        <img src="assets/x.png" alt="">
+                    <button class="x-share-btn">
+                        <img src="assets/x.png" alt="X">
                         <span class="mx-3">X</span>
                     </button>
-                    <button>
-                        <img src="assets/email.png" alt="">
+                    <button class="email-share-btn">
+                        <img src="assets/email.png" alt="Email">
                         <span class="mx-3">Email</span>
                     </button>
                 </div>
@@ -554,6 +554,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/sidebar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="js/share.js"></script>
     <script>
 
                 const u_id = localStorage.getItem('u_id');
@@ -924,8 +925,6 @@
                         const openingTime = formatTime(timeSlots[0].start_time);
                         const closingTime = formatTime(timeSlots[0].end_time);
 
-                        console.log(timeSlots[0].start_time);
-                        console.log(timeSlots[0].end_time);
 
                         document.querySelector('.timing-box').innerHTML = `
                     <p class="hours-normal mb-1">Opens ${openingTime} - Closes ${closingTime}</p>
