--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                                         <i class="bi bi-cloud-arrow-up"></i>
                                         Upload your file
                                     </span>
-                                    <a href="assets\DB Structure for Health Care Providers.xlsx"
+                                    <a href="assets/demo-file-global-care-givers.xlsx"
                                         class="text-primary text-decoration-none download-btn">
                                         <i class="fas fa-download me-1"></i>
                                         Download sample file (.xls format)
